[tool.poetry]
name = "homework_04"
version = "0.1.0"
description = ""
authors = ["verGe <a1988a1@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
