[tool.poetry]
name = "otus-hw-03"
version = "0.1.0"
description = ""
authors = ["verGe <a1988a1@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
